--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,6 @@ ProjectSettings/Packages/com.unity.learn.iet-framework/Settings.json
 ProjectSettings/Packages/com.unity.probuilder/Settings.json
 ProjectSettings/Packages/com.unity.learn.iet-framework/Settings.json
 ProjectSettings/Packages/com.unity.probuilder/Settings.json
+ProjectSettings/Packages/com.unity.learn.iet-framework/Settings.json
+ProjectSettings/Packages/com.unity.probuilder/Settings.json
+ProjectSettings/Packages/com.unity.learn.iet-framework/Settings.json
